--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
             - mysql-data:/var/lib/mysql-data
             - ./init-db:/docker-entrypoint-initdb.d
         healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "$MYSQL_USER", "-p$MYSQL_PASSWORD"]
+            test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "pig", "-p123456"]
             interval: 10s
             timeout: 5s
             retries: 5
@@ -36,7 +36,7 @@ services:
         image: opensnail/snail-job:1.2.0
         container_name: snail-job-server
         environment:
-            - PARAMS=--spring.datasource.username=pig
+            PARAMS: --spring.datasource.username=pig
                 --spring.datasource.password=123456
                 --spring.datasource.url=jdbc:mysql://mysql-local:3306/snail_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
                 --spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
