--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
             MYSQL_USER: pig
             MYSQL_PASSWORD: 123456
         volumes:
-            - mysql-data:/var/lib/mysql-data
+            - mysql-data:/var/lib/mysql
             - ./init-db:/docker-entrypoint-initdb.d
         healthcheck:
             test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "pig", "-p123456"]
